# anyio_serial

./: .gitignore  Makefile  README.rst  requirements.txt  setup.cfg  setup.py
anyio_serial/: __init__.py  _impl.py
debian/: .gitignore  changelog  control  rules  watch
tests/: test_serial.py
