[metadata]
name = anyio_serial
description = Quick and dirty serial bytestreams for anyio
long_description = file: README.rst
author = Matthias Urlichs
author_email = matthias@urlichs.de
project_urls =
    Source code = https://github.com/M-o-a-T/anyio_serial.git
    Issue tracker = https://github.com/M-o-a-T/anyio_serial/issues
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = anyio_serial
python_requires = >= 3.6.2
zip_safe = True
install_requires =
    anyio >= 2
    serial
setup_requires =
    setuptools_scm
    pytest-runner
    trustme >= 0.5

[options.packages.find]
where = .

[flake8]
max-line-length = 99

[mypy]
ignore_missing_imports = false
